# runtime-matters

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LESSONS.md  MAP.md  PROJECT.md  README.md  TLDR.md  dist-workspace.toml  justfile  release-please-config.json  release-plz.toml  tools.toml
.github/workflows/: ci.yml  publish.yml  release-plz.yml  release.yml  v-release.yml
crates/rtm-cli/: Cargo.toml  build.rs
crates/rtm-cli/benches/: spawn_latency.rs  status_query.rs
crates/rtm-cli/examples/: load_test.rs  test_kill.rs  test_spawn.rs
crates/rtm-cli/examples/support/: report.rs  spawn.rs
crates/rtm-cli/src/: cli.rs  lib.rs  main.rs  mcp.rs  shared.rs
crates/rtm-cli/src/cli/: capture.rs  daemon.rs  doctor.rs  events.rs  initdb.rs  kill.rs  mcp.rs  mod.rs  nudge.rs  output.rs  shim.rs  spawn.rs  status.rs  validate_target.rs  version.rs
crates/rtm-cli/src/mcp/: mod.rs
crates/rtm-cli/templates/: SKILL.md
crates/rtm-cli/tests/: cli_flags.rs  critical_scenarios.rs  docker_documentation.rs  docker_e2e.rs  generated_snapshots.rs  install_recipes.rs  integration_events_cursor.rs  integration_pass1.rs  integration_pass2.rs  integration_pass3.rs  integration_pass4.rs  integration_pass5.rs  integration_pass6.rs  integration_pass7.rs  spawn_target.rs  surface_snapshots.rs
crates/rtm-cli/tests/common/: docker.rs  harness.rs  lifecycle.rs  mcp.rs  mod.rs  output.rs  process.rs  tmux.rs  wait.rs
crates/rtm-cli/tests/snapshots/: generated_snapshots__cli_help.snap  generated_snapshots__generated_admin_skill_doc_is_stable.snap  generated_snapshots__generated_mcp_tool_list_is_stable.snap  generated_snapshots__generated_mcp_tool_names_are_stable.snap  surface_snapshots__doctor_json_response_is_stable.snap  surface_snapshots__doctor_output_is_stable.snap  surface_snapshots__mcp_responses_are_stable.snap  surface_snapshots__session_facing_cli_json_outputs_are_stable.snap  surface_snapshots__status_json_output_is_stable.snap
crates/rtm-client/: CHANGELOG.md  Cargo.toml  README.md
crates/rtm-client/src/: event_watcher.rs  lib.rs
crates/rtm-client/tests/: integration_event_watcher.rs  integration_typed_helpers.rs  typed_helpers.rs
crates/rtm-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs  tools.toml
crates/rtm-core/src/: admin.rs  capture.rs  cli_output.rs  error.rs  isolation.rs  launcher.rs  lib.rs  mcp.rs  path_shaped_envs.rs  proto.rs  spawn_context.rs  tool_contracts.rs  types.rs  version.rs
crates/rtm-core/src/types/: lifecycle.rs  nudge.rs  runtime.rs  spawn.rs  validate_target.rs
crates/rtm-core/tests/: cli_output.rs  serde_snapshots.rs  tool_contract_snapshots.rs  wire_compat.rs
crates/rtm-core/tests/fixtures/v0_5/: CAPTURE.md  ack.json  capture.json  cursor_expired.json  doctor.json  error.json  events.json  kill_by_pid.json  killed.json  mcp_bridge.json  nudge.json  shim_launch.json  spawned.json  status.json  stopping.json  validate_target.json  version.json  watchers.json
crates/rtm-core/tests/snapshots/: serde_snapshots__capture_error_json_names_are_stable.snap  serde_snapshots__error_code_json_names_are_stable.snap  serde_snapshots__log_availability_json_shapes_are_stable.snap  serde_snapshots__pane_snapshot_json_shape_is_stable.snap  serde_snapshots__runtime_capability_json_names_are_stable.snap  serde_snapshots__runtime_event_json_shapes_are_stable.snap  serde_snapshots__runtime_response_json_shapes_are_stable.snap  serde_snapshots__runtime_rpc_json_shapes_are_stable.snap  serde_snapshots__spawn_request_json_round_trips_mounts.snap  tool_contract_snapshots__admin_tools_readme_section_is_stable.snap  tool_contract_snapshots__mcp_tool_list_contract_is_stable.snap
crates/rtm-core/tests/support/: mod.rs
crates/rtm-daemon/: Cargo.toml  build.rs
crates/rtm-daemon/src/: backend.rs  docker_argv.rs  docker_mount_plan.rs  docker_preflight.rs  docker_runtime.rs  doctor.rs  error.rs  event_channel.rs  event_log.rs  handler.rs  lib.rs  mcp_bridge.rs  reconcile.rs  runtime_kill.rs  server.rs  shim_socket.rs  socket.rs  spawn_preflight.rs  version.rs
crates/rtm-daemon/src/reconcile/: tests.rs
crates/rtm-daemon/src/server/: config.rs  events.rs  runner.rs  spawn.rs  state.rs  status.rs  termination.rs  tests.rs  watcher.rs
crates/rtm-daemon/src/snapshots/: rtm_daemon__docker_argv__tests__docker_run_launch_emits_declared_mounts_in_order.snap
crates/rtm-daemon/src/spawn_preflight/: tests.rs
crates/rtm-daemon/src/spawn_preflight/tests/: conflicts.rs  docker_profiles.rs  helpers.rs  image_availability.rs  image_user.rs  mounts.rs
crates/rtm-launchers/: Cargo.toml
crates/rtm-launchers/src/: claude.rs  codex.rs  lib.rs
crates/rtm-launchers/tests/: conformance.rs
crates/rtm-paths/: Cargo.toml
crates/rtm-paths/src/: lib.rs
crates/rtm-platform/: Cargo.toml
crates/rtm-platform/src/: kqueue.rs  lib.rs  pidfd.rs  process.rs  process_exit.rs  signal.rs  test_support.rs  tmux.rs
crates/rtm-platform/tests/: process_exit_api.rs
crates/rtm-store/: Cargo.toml
crates/rtm-store/migrations/: 0001_lifecycle.sql  0002_probe_state.sql  0003_lifecycle_isolation.sql
crates/rtm-store/src/: config.rs  lib.rs  schema.rs
crates/rtm-store/src/sqlite/: lifecycle.rs  mod.rs
crates/rtm-store/src/sqlite/lifecycle/: codec.rs  tests.rs
examples/dockerfiles/: claude.Dockerfile
scripts/: check-loc-limit.sh
