[workspace]
members = [
    "crates/rtm-core",
    "crates/rtm-client",
    "crates/rtm-paths",
    "crates/rtm-platform",
    "crates/rtm-launchers",
    "crates/rtm-store",
    "crates/rtm-daemon",
    "crates/rtm-cli",
]
resolver = "3"

[workspace.package]
version = "0.2.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/littleorgans/runtime-matters"
homepage = "https://github.com/littleorgans/runtime-matters"
authors = ["Stuart Robinson"]
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.51", features = ["derive"] }
insta = { version = "1.43.2", features = ["json", "redactions"] }
libc = "0.2.186"
lilo-rm-core = { path = "crates/rtm-core", version = "0.6.2" }
lilo-rm-client = { path = "crates/rtm-client", version = "0.6.2" }
rtm-daemon = { path = "crates/rtm-daemon" }
rtm-launchers = { path = "crates/rtm-launchers" }
rtm-paths = { path = "crates/rtm-paths" }
rtm-platform = { path = "crates/rtm-platform" }
rtm-store = { path = "crates/rtm-store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.3", features = ["chrono", "migrate", "runtime-tokio", "sqlite", "uuid"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.8.23"
tokio = { version = "1.48.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.dist]
inherits = "release"
lto = "thin"

[profile.install-local]
inherits = "release"
codegen-units = 16
lto = false

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
installers = ["shell"]
github-attestations = true
# release-please creates the GitHub Release; cargo-dist only uploads into it.
create-release = false
unix-archive = ".tar.gz"
windows-archive = ".zip"
include = ["LICENSE", "README.md"]
auto-includes = false
pr-run-mode = "skip"
