[package]
name = "lilo-rm-client"
description = "Runtime Matters client shell for the public rtmd Unix socket contract"
readme = "README.md"
version = "0.6.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["runtime", "client", "agents", "helioy", "lilo"]
categories = ["api-bindings", "development-tools"]

[lib]
name = "lilo_rm_client"
path = "src/lib.rs"

[dependencies]
lilo-rm-core.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
rtm-daemon.workspace = true
rtm-paths.workspace = true
rtm-store.workspace = true
serde_json.workspace = true
tempfile.workspace = true
uuid.workspace = true
