[package]
name = "rtm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rtm-core.workspace = true
rtm-launchers.workspace = true
rtm-platform.workspace = true
rtm-store.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
