[package]
name = "rtm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
lilo-rm-core.workspace = true
rtm-launchers.workspace = true
rtm-paths.workspace = true
rtm-platform.workspace = true
rtm-store.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
rtm-platform = { workspace = true, features = ["test-support"] }
tempfile.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unwrap_used = "warn"
expect_used = "warn"
