[package]
name = "rtm-launchers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
lilo-rm-core.workspace = true
uuid.workspace = true

[lints]
workspace = true
