[package]
name = "rtm-paths"
description = "Runtime Matters filesystem path policy and daemon endpoint boundary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "rtm_paths"
path = "src/lib.rs"
