[package]
name = "rtm-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
libc.workspace = true
lilo-rm-core.workspace = true
tokio.workspace = true
